# back2black

./: .gitignore  CMakeLists.txt  DOCS_CONTRACTS.txt  DOCS_LOG.txt  DOCS_MANUAL.txt  DOCS_RELEASE.txt  DOCS_TODO.txt  FindSDL2.cmake  FindSDL2.cmakeALTENRATIVE_DELETE  FindSDL2.cmakeV2  README.md  binary_to_compressed_c.sh  build_macos.sh  build_windows.bat  build_windows_msvc.bat  docs_developer_manual.txt  imgui.ini  imgui.iniBORRAR.ini  imgui_docs.txt  llegeixme.txt  log.txt  release_macos.sh  test_applebundle.sh  test_cli_masks.sh  test_cli_masks_msvc.bat  test_cli_sam.bat  test_cli_sam.sh  test_cli_simplify.bat  test_cli_simplify.sh  test_crash.bat  test_crash.sh  test_editor.bat  test_editor.sh  test_editor_msvc.bat  test_face.sh  test_lester_applebundle.sh  test_onnx.bat  test_opencv.bat  test_opencv.sh  test_opencv_msvc.bat  (+7 more)
api/: CMakeLists.txt  api.cpp  api.h
build_macos/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_macos/editor/: Makefile  cmake_install.cmake
build_macos/editor_blank/: Makefile  cmake_install.cmake
build_macos/ggml/: Makefile  cmake_install.cmake
build_macos/ggml/src/: Makefile  cmake_install.cmake
cli/: CMakeLists.txt  main.cpp
cli_masks/: CMakeLists.txt  main.cpp  main.cppBACKUP.cpp  main.cppOLD.cpp
cli_sam/: CMakeLists.txt  main.cpp
cli_simplify/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  common1.cpp  common1.h  data_structures.h  filesystem_header.h
data/: times.txt
editor/: Apple Silicon (M3)  CMakeLists.txt  IconsFontAwesome5.h  IconsFontAwesome6.h  Ruben Tous in an expert in data engineering and ma  colors.cpp  editor.cpp  editor.h  faces.cpp  file_dialog.cpp  file_dialog.h  gui_utils.cpp  gui_utils.h  main.cpp  myfont.h  sam_utils.cpp  sam_utils.h  state.h  untitled.cpp  utils.cpp  utils.h  video.cpp  video.h
editor/release_macos/: CMakeLists.txt
editor_blank/: CMakeLists.txt  main.cpp
face/: CMakeLists.txt  face.cpp  face.h
macos_release_assets/: Info.plistNOT_USED_YET.plist  banner.clip  editor.icns  icon.clip  icon_v2.clip  icongeneration.txt  lester.icns
node_addon/initial_study/: readme.txt
node_addon/initial_study/test-build-with-opencv/: cpphello  cpphello.cpp  readme.txt
node_addon/initial_study/with-cmake-js/cmake-js-helloworld/: CMakeLists.txt  cpphello.cpp  readme.txt  test.js
node_addon/initial_study/with-cmake-js/cmake-js-helloworld-opencv/: CMakeLists.txt  cpphello.cpp  readme.txt
node_addon/initial_study/with-gyp/node-gyp-api/: test2.js
node_addon/initial_study/with-gyp/node-gyp-helloworld/: binding.gyp  readme.txt
node_addon/initial_study/with-gyp/node-gyp-helloworld-library/: binding.gyp  cpphello.cpp  library.cpp  library.h  library_test.cpp  readme.txt
node_addon/initial_study/with-gyp/node-gyp-helloworld-opencv/: binding.gyp  cpphello.cpp
node_addon/initial_study/with-gyp/node-gyp-helloworld-opencv-images/: binding.gyp  cpphello.cpp  test.js
node_addon/initial_study/with-gyp/node-gyp-helloworld-release-example/: readme.txt  test.js
node_addon/initial_study/with-gyp/node-gyp-helloworld-release-example/Release/: addon.node
node_addon/lester-node-addon/: binding.gyp  package.json  readme.txt  test1.js  todo.txt
node_addon/lester-node-addon-example-release/: test2.js
node_addon/lester-node-addon_latest/: binding.gyp  binding.gypMAC  binding.gypTMP  binding_utils.h  readme.txt  test1.js  test2.js  todo.txt  wrappedobject.h
node_addon/lester-node-addon_latest/publish/segment-anything-model/: install.js  package.json
node_addon/lester-node-addon_latest/publish/segment-anything-model-mac/: package.json
node_addon/lester-node-addon_latest/publish/segment-anything-model-win64/: package.json
node_addon/lester-node-addon_latest/test/: package-lock.json  package.json
node_addon/lester-node-addon_latest/test/test_mac/: package-lock.json  package.json  test.js
node_addon/lester-node-addon_latest/test/test_win/: package-lock.json  package.json  test.js
node_addon/lester-node-addon_v1/: binding.gyp  package-lock.json  package.json  readme.txt  wrappedobject.cpp
node_addon/lester-node-addon_v1/publish/segment-anything-model/: main.js  package.json
node_addon/lester-node-addon_v2/: cpphello.cpp  todo.txt  wrappedobject.cpp
node_addon/lester-node-addon_v2/publish/segment-anything-model/: package.json
node_addon/lester-node-addon_v2/test/: test.js
node_addon/lester-node-addon_v3_single_entry/: binding.gyp  binding_utils.cpp
node_addon/lester-node-addon_v3_single_entry/publish/segment-anything-model/: install.js  main.js  package.json  test_before_publish.js
node_addon/lester-node-addon_v3_single_entry/test/: package-lock.json  package.json
node_addon/test/: package-lock.json  package.json  test.js
onnxruntime/: CMakeLists.tx_v1_tDISCARDED_BUT_CLEANER  CMakeLists.txt  CMakeLists.txt_v2
segmentor/: CMakeLists.txt  segmentor.cpp  segmentor.h
segmentor_sam1/: CMakeLists.txt  segmentor_sam1.cpp  segmentor_sam1.h
segmentor_sam2/: CMakeLists.txt  sam2.cpp  segmentor_sam2.cpp  segmentor_sam2.h
segmentor_sam21/: CMakeLists.txt  onnxruntime_utils.h  sam21.cpp  sam21.h  segmentor_sam21.cpp  segmentor_sam21.h  tensor_utils.h
simplify/: CMakeLists.txt  simplify.cpp  simplify.h
test_applebundle/: CMakeLists.txt  gui_utils.cpp  main.cpp  state.h  video.h
test_applebundle/release_macos/: customtemplate.plist.in.txt
test_crash/: CMakeLists.txt  colors.cpp  colors.h  editor.cpp  gui_utils.cpp  main.cpp  sam_utils.h  state.h  video.cpp  video.h
test_face/: CMakeLists.txt  main.cpp
test_filesystem/: CMakeLists.txt  main.cpp
test_onnx/: CMakeLists.txt  main.cpp  mnist.h
test_onnx_opencv/: CMakeLists.txt  mnist.h
test_onnx_v2/: CMakeLists.txt  CMakeListsNOTWORKING.txt
test_opencv/: CMakeLists.txt  main.cpp
test_sam/: CMakeLists.txt
test_sam2/: CMakeLists.txt  main.cppDISABLE.cpp
test_segmentor/: CMakeLists.txt  main.cpp
test_segmentor_sam1/: CMakeLists.txt  main.cpp
test_segmentor_sam2/: CMakeLists.txt  main.cpp
test_segmentor_sam21/: CMakeLists.txt  CMakeListsOLD_ONNX_DYNAMIC.txt  main.cpp
(+8 files in other folders)
